--- a/Communication/Communication.csproj
+++ b/Communication/Communication.csproj
@@ -51,6 +51,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="State.cs" />
     <Compile Include="Network.cs" />
     <Compile Include="IDarPooling.cs" />
     <Compile Include="Model.cs" />
