--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.30729</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{B4DA5967-AA86-466F-B27B-216682D67932}</ProjectGuid>
     <OutputType>Exe</OutputType>
@@ -62,6 +62,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
+    <Compile Include="State.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
