--- a/Communication/Communication.csproj
+++ b/Communication/Communication.csproj
@@ -56,6 +56,7 @@
     <Compile Include="IDarPooling.cs" />
     <Compile Include="Model.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Result.cs" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
