--- a/UserNodeMobileGUI/UserNodeMobileGUI.csproj
+++ b/UserNodeMobileGUI/UserNodeMobileGUI.csproj
@@ -18,6 +18,7 @@
     <NativePlatformName>Windows Mobile 5.0 Smartphone SDK</NativePlatformName>
     <FormFactorID>
     </FormFactorID>
+    <StartupObject>UserNodeMobileGUI.Program</StartupObject>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -58,10 +59,6 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
-    <Reference Include="UserNodeCore, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\UserNodeCore\bin\Debug\UserNodeCore.exe</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DarpoolingForm.cs">
