Added the support for SHA also in the server side. Created and published the new IDarPoolingForwarding interface to deal with commands forwarded by the node. This feature is still under testing

--- a/ServiceNodeCore/ServiceNodeCore.csproj
+++ b/ServiceNodeCore/ServiceNodeCore.csproj
@@ -49,6 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DarPoolingService.cs" />
+    <Compile Include="IDarPoolingForwarding.cs" />
     <Compile Include="Launcher.cs" />
     <Compile Include="ServiceNodeCore.cs" />
     <Compile Include="GMapsAPI.cs" />
