--- a/UserNodeGUI/UserNodeGUI.csproj
+++ b/UserNodeGUI/UserNodeGUI.csproj
@@ -89,8 +89,8 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <EmbeddedResource Include="RegisterUser.resx">
-      <DependentUpon>RegisterUser.cs</DependentUpon>
+    <EmbeddedResource Include="RegisterUserDialog.resx">
+      <DependentUpon>RegisterUserDialog.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <Compile Include="Properties\Resources.Designer.cs">
@@ -107,11 +107,11 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <Compile Include="RegisterUser.cs">
+    <Compile Include="RegisterUserDialog.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="RegisterUser.Designer.cs">
-      <DependentUpon>RegisterUser.cs</DependentUpon>
+    <Compile Include="RegisterUserDialog.Designer.cs">
+      <DependentUpon>RegisterUserDialog.cs</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
